# Dju

./: MANIFEST.in  README.md  pyproject-poetry.toml  pyproject-setuptools.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
django_util/: __init__.py  apps.py  autocompletes.py  metadata.yml  models.py
django_util/migrations/: 0000_pgsql_exts.py
django_utils/: apps.py  autocompletes.py  metadata.yml  models.py
djutil/: models.py
metadata/: description
metadata/requirements/: base.txt  lint.txt
src/djutil/: __init__.py  autocompletes.py  models.py  str.py
