[tool.poetry]
name = 'DjUtil'
version = '0.0.0.dev0'

description = 'Django Utilities'

license = 'MIT'

authors = [
  'STEAM for Vietnam Foundation AI & Robotics Educational Initiative <Edu.AI@STEAMforVietNam.org>'
]
maintainers = [
  'STEAM for Vietnam Foundation AI & Robotics Educational Initiative <Edu.AI@STEAMforVietNam.org>'
]

readme = 'README.md'

homepage = 'https://GitHub.com/Django-AI/DjUtil'
repository = 'https://GitHub.com/Django-AI/DjUtil'
documentation = 'https://Django-AI.GitHub.io/DjUtil'

keywords = [
  'Django',
  'util',
  'utils',
  'utilities',
]
classifiers = [
  'Development Status :: 4 - Beta',
  # 'Development Status :: 5 - Production/Stable',
  # 'Development Status :: 6 - Mature',
  'Environment :: MacOS X',
  'Environment :: Win32 (MS Windows)',
  'Framework :: Django',
  'Framework :: Django :: 4.0',
  'Intended Audience :: Developers',
  'Operating System :: MacOS',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Microsoft :: Windows :: Windows 7',
  'Operating System :: Microsoft :: Windows :: Windows 8',
  'Operating System :: Microsoft :: Windows :: Windows 8.1',
  'Operating System :: Microsoft :: Windows :: Windows 10',
  'Operating System :: OS Independent',
  'Operating System :: Other OS',
  'Operating System :: POSIX',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Software Development',
  'Topic :: Software Development :: Libraries',
  'Topic :: Software Development :: Libraries :: Python Modules',
]

packages = [
  {include = 'djutil', from = 'src'}
]

include = []
exclude = []


[tool.poetry.dependencies]

# Python
# ======
Python = '^3.8'


# Django
# ======
Django = '^4.0'


[tool.poetry.urls]
GitHub = 'https://GitHub.com/Django-AI/DjUtil'


[build-system]
requires = [
  'Poetry-Core >= 1.0.7'
]
build-backend = 'poetry.core.masonry.api'
