[tool.poetry]
name = 'Dj-Util'
version = '0.0.0.dev1'

description = 'Django Utilities'

license = 'MIT'

authors = [
  'The Vinh LUONG (LƯƠNG Thế Vinh) <TheVinhLuong@gmail.com>'
]
maintainers = [
  'The Vinh LUONG (LƯƠNG Thế Vinh) <TheVinhLuong@gmail.com>'
]

readme = 'README.md'

homepage = 'https://GitHub.com/Django-AI/Dj-Util'
repository = 'https://GitHub.com/Django-AI/Dj-Util'
documentation = 'https://Django-AI.GitHub.io/Dj-Util'

keywords = [
  'Django',

  'utilities',
  'utils',
  'util',
]

classifiers = [
  'Development Status :: 5 - Production/Stable',
  # 'Development Status :: 6 - Mature',
  'Environment :: MacOS X',
  'Environment :: Win32 (MS Windows)',
  'Framework :: Django',
  'Framework :: Django :: 4.0',
  'Intended Audience :: Developers',
  'Operating System :: MacOS',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Microsoft :: Windows :: Windows 7',
  'Operating System :: Microsoft :: Windows :: Windows 8',
  'Operating System :: Microsoft :: Windows :: Windows 8.1',
  'Operating System :: Microsoft :: Windows :: Windows 10',
  'Operating System :: OS Independent',
  'Operating System :: Other OS',
  'Operating System :: POSIX',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Software Development',
  'Topic :: Software Development :: Libraries',
  'Topic :: Software Development :: Libraries :: Python Modules',
]

packages = [
  {include = 'djutil', from = 'src'}
]

include = []
exclude = []


[tool.poetry.dependencies]

# Python
# ======
Python = '^3.8'

# Django & related
# ================
Django = '^4.1'
Django-Autocomplete-Light = '^3.9.4'
Django-Model-Utils = '^4.2.0'


[tool.poetry.urls]
GitHub = 'https://GitHub.com/Django-AI/Dj-Util'


[build-system]
requires = [
  'Poetry-Core >= 1.0.8',
]
build-backend = 'poetry.core.masonry.api'
