# python-poetry.org/docs/pyproject


[tool.poetry]
name = 'Dj-Util'
version = '0.0.0.a0'

description = 'Django Utilities'

license = 'MIT'

authors = [
  'The Vinh LUONG (LƯƠNG Thế Vinh) <TheVinhLuong@gmail.com>',
]
maintainers = [
  'The Vinh LUONG (LƯƠNG Thế Vinh) <TheVinhLuong@gmail.com>',
]

readme = 'README.md'

homepage = 'https://GitHub.com/Djaizz/Dj-Util'
repository = 'https://GitHub.com/Djaizz/Dj-Util'
documentation = 'https://Djaizz.GitHub.io/Dj-Util'

keywords = [
  'Django',

  'utilities',
  'utils',
  'util',
]

classifiers = [
  'Development Status :: 5 - Production/Stable',
  # 'Development Status :: 6 - Mature',
  'Environment :: MacOS X',
  'Environment :: Win32 (MS Windows)',
  'Framework :: Django',
  'Framework :: Django :: 4.0',
  'Intended Audience :: Developers',
  'Operating System :: MacOS',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Microsoft :: Windows :: Windows 7',
  'Operating System :: Microsoft :: Windows :: Windows 8',
  'Operating System :: Microsoft :: Windows :: Windows 8.1',
  'Operating System :: Microsoft :: Windows :: Windows 10',
  'Operating System :: OS Independent',
  'Operating System :: Other OS',
  'Operating System :: POSIX',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Software Development',
  'Topic :: Software Development :: Libraries',
  'Topic :: Software Development :: Libraries :: Python Modules',
]

packages = [
  {include = 'djutil', from = 'src'}
]

include = []
exclude = []


[tool.poetry.dependencies]
python = '^3.8.1'
django = ">=4.1.7"
django-autocomplete-light = ">=3.9.4"
django-model-utils = ">=4.3.1"


[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
build = {version = ">=0.10.0", optional = true}


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
commitizen = {version = ">=2.42.1", optional = true}
pre-commit = {version = ">=3.1.1", optional = true}


[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
sphinx = {version = ">=6.1.3", optional = true}
sphinx-autobuild = {version = ">=2021.3.14", optional = true}
sphinxcontrib-jsmath = {version = ">=1.0.1", optional = true}
commonmark = {version = ">=0.9.1", optional = true}
recommonmark = {version = ">=0.7.1", optional = true}


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
bandit = {version = ">=1.7.4", optional = true}
flake8 = {version = ">=6.0.0", optional = true}
mypy = {version = ">=1.0.0", optional = true}
pycodestyle = {version = ">=2.10.0", optional = true}
pydocstyle = {version = ">=6.3.0", optional = true}
pylama = {version = ">=8.4.1", optional = true}
pylint = {version = ">=2.16.1", optional = true}


[tool.poetry.group.publish]
optional = true

[tool.poetry.group.publish.dependencies]
twine = {version = ">=4.0.2", optional = true}


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
nose = {version = ">=1.3.7", optional = true}
nose2 = {version = ">=0.12.0", optional = true}
pytest = {version = ">=7.2.1", optional = true}
pytest-cov = {version = ">=4.0.0", optional = true}
unittest2 = {version = ">=1.1.0", optional = true}


[tool.poetry.extras]
# python-poetry.org/docs/pyproject#extras
# The dependencies specified for each extra must already be defined as project dependencies
# Dependencies listed in dependency groups cannot be specified as extras
build = []
dev = []
doc = []
lint = []
publish = []
test = []


[tool.poetry.plugins]

[tool.poetry.plugins."blogtool.parsers"]


[tool.poetry.urls]
GitHub = 'https://GitHub.com/Djaizz/Dj-Util'


[build-system]
requires = [
  'Poetry-Core >= 1.5.1',
]
build-backend = 'poetry.core.masonry.api'
