[metadata]
name = Dj-Util
version = attr: djutil.__version__

url = GitHub.com/Django-AI/Dj-Util
download_url = GitHub.com/Django-AI/Dj-Util/archive/main.zip

author = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
author_email = Edu.AI@STEAMforVietNam.org
maintainer = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
maintainer_email = Edu.AI@STEAMforVietNam.org

classifiers =

license = MIT

description = Django Utilities
long_description = file: README.md
long_description_content_type = text/markdown

keywords =
  Django

  util
  utils
  utilities


[options]
zip_safe = False

setup_requires =

install_requires =

python_requires = >= 3.8

scripts =

include_package_data = True

packages = find:

package_dir =
  =src

namespace_packages =

py_modules =


[options.packages.find]
where = src
exclude =
include =
  *
